Change button-group to use flexbox.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -98,6 +98,7 @@
  */
 
 @import "shared/ui/action/action";
+@import "shared/ui/button-group/button-group";
 @import "shared/ui/color/color";
 @import "shared/ui/form/form";
 @import "shared/ui/range/range";
