Fix bug with missing icons.

--- a/src/app/components/tile-item/tile-item.html
+++ b/src/app/components/tile-item/tile-item.html
@@ -28,7 +28,7 @@
     </svg> -->
     <div class="TileItem__icon" ng-transclude="icon">
       <svg>
-        <use xlink:href="{{ tileItem.iconUrl }}"></use>
+        <use xlink:href="" ng-attr-xlink:href="{{ tileItem.iconUrl }}"></use>
       </svg>
     </div>
     <div class="TileItem__title truncate">{{ tileItem.title }}</div>
