--- a/src/app/containers/rule-details/rule-details.scss
+++ b/src/app/containers/rule-details/rule-details.scss
@@ -23,76 +23,41 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-.RuleDetails {
-
+.RuleDetails,
+.RuleDetails__wrapper {
+  min-height: 100%;
 }
 
+
 .RuleDetails__wrapper {
-  @include rem(padding, 1.5);
+  background-color: $white;
+  border-left: 1px solid #eaeaea;
+  border-right: 1px solid #eaeaea;
   width: 100%;
+  @include rem(padding, 4.5, 1.5, 3);
 }
 
 @include media($min-width-s) {
   .RuleDetails__wrapper {
-    // margin: 0 auto;
-    padding: 0;
-    // @include rem(padding, 1.5, 0, 0);
-    // width: 600px;
+    margin: 0 auto;
+    width: 640px;
+    @include rem(padding, 7.5, 3, 3);
   }
 }
+
 
 .RuleDetails__sidebar {
-  @include rem(margin, 0, 0, 3);
-  // @include rem(padding, 1.5);
+  @include rem(margin, 0, 0, 6);
 }
 
-@include media($min-width-s) {
-  .RuleDetails__sidebar {
-    @include rem(min-height, 36);
-    margin: 0;
-    position: fixed;
-      @include rem(bottom, 3);
-      @include rem(top, 5.5);
-    width: 40%;
-    z-index: 0;
-    @include rem(padding, 0, 1.5);
-  }
-}
-
-@include media($min-width-m) {
-  .RuleDetails__sidebar {
-    @include rem(top, 9);
-  }
-}
-
-@include media($min-width-l) {
-  .RuleDetails__sidebar {
-    // width: 30%;
-    width: 315px;
-  }
-}
-
-.RuleDetails__sidebar-wrapper {
-  background-color: rgba($grey, 0.1);
-  height: 100%;
-  @include rem(border-radius, 0.2);
-  @include rem(padding, 3, 0, 0);
-}
-
-@include media($min-width-s) {
-  .RuleDetails__sidebar-wrapper {
-    @include rem(padding, 3, 1.5);
-  }
-}
 
 .RuleDetails__sidebar-navigation {
   @include display(flex);
-  @include rem(margin, 4.5, 0, 0);
   width: 100%;
 
   li {
+    background-color: rgba($grey, 0.05);
     cursor: pointer;
-    position: relative;
     text-align: center;
     @include flex(1 1 100%);
     @include rem(padding, 0.75);
@@ -102,27 +67,12 @@
       color: $grey;
     }
 
-    &.disabled {
-      cursor: default;
-      text-decoration: line-through;
-    }
-
     .List__icon {
       display: none;
     }
   }
 }
 
-@include media($min-width-s) {
-  .RuleDetails__sidebar-navigation {
-    display: block;
-    @include rem(margin, 1.5, 0, 0);
-
-    li {
-      @include rem(margin, 0.75, 0);
-    }
-  }
-}
 
 .RuleDetails__name,
 .RuleDetails__description {
@@ -133,51 +83,26 @@
   white-space: nowrap;
 }
 
-.RuleDetails__name {
-  @include rem(font-size, 1.5);
-  @include rem(line-height, 2);
-  @include rem(margin, 1.5, 0, 0.5);
-}
 
-.RuleDetails__description {
+.RuleDetails__name {
   letter-spacing: 0.1em;
   text-transform: uppercase;
+  @include rem(margin, 0, 0, 4.5);
 }
 
-@include media($min-width-s) {
-  .RuleDetails__description {
-    @include rem(font-size, 0.8);
-  }
+
+.RuleDetails__description {
+  display: none;
 }
 
-.RuleDetails__content {
-
-}
-
-@include media($min-width-s) {
-  .RuleDetails__content {
-    margin-left: 40%;
-    width: 60%;
-    @include rem(padding, 1.5);
-  }
-}
-
-@include media($min-width-l) {
-  .RuleDetails__content {
-    margin-left: 384px;
-    width: 710px;
-    // margin-left: 40%;
-    // width: 60%;
-  }
-}
 
 .RuleDetails__icon {
-  background-color: $white;
-  border-radius: 100%;
   display: block;
+  fill: $grey;
   margin: 0 auto;
   @include rem(height, 4);
-  @include rem(padding, 0.8);
+  @include rem(margin-bottom, 1.5);
+  @include rem(padding, 0.6);
   @include rem(width, 4);
 }
 
