--- a/src/app/components/tile-list/tile-list.scss
+++ b/src/app/components/tile-list/tile-list.scss
@@ -24,8 +24,12 @@
 
 
 .TileList {
-  @include display(flex);
-  @include flex-direction(row);
-  @include flex-wrap(wrap);
-  @include rem(padding, 0.5, 0.25, 0.25);
+  display: block;
+
+  & > div {
+    @include display(flex);
+    @include flex-direction(row);
+    @include flex-wrap(wrap);
+    @include rem(padding, 0.5, 0.25, 0.25);
+  }
 }
