--- a/src/app/containers/rule-details/rule-details.html
+++ b/src/app/containers/rule-details/rule-details.html
@@ -20,7 +20,6 @@
   SOFTWARE.
 -->
 
-<guh-action-bar back-button="true" on-back="ruleDetails.back()"></guh-action-bar>
 
 <div class="RuleDetails__wrapper">
   <div class="RuleDetails__sidebar">
@@ -32,25 +31,25 @@
       <div class="RuleDetails__description">{{ ruleDetails.getDescription('&nbsp;&middot;&nbsp;') }}</div>
 
       <ul class="List RuleDetails__sidebar-navigation">
-        <li ng-class="{ 'active': ruleDetails.showEnterActions, 'disabled': ruleDetails.actions.length === 0 }" ng-click="ruleDetails.show('enterActions')">
+        <li ng-class="{ 'active': ruleDetails.showEnterActions }" ng-click="ruleDetails.show('enterActions')">
           <svg class="List__icon List__icon_before-text">
             <use xlink:href="./assets/svg/ui/ui.symbol.svg#log-in"></use>
           </svg>
           ON Actions
         </li>
-        <li ng-class="{ 'active': ruleDetails.showExitActions, 'disabled': ruleDetails.exitActions.length === 0 }" ng-click="ruleDetails.show('exitActions')">
+        <li ng-class="{ 'active': ruleDetails.showExitActions }" ng-click="ruleDetails.show('exitActions')">
           <svg class="List__icon List__icon_before-text">
             <use xlink:href="./assets/svg/ui/ui.symbol.svg#log-out"></use>
           </svg>
           OFF Actions
         </li>
-        <li ng-class="{ 'active': ruleDetails.showTrigger, 'disabled': ruleDetails.events.length === 0 }" ng-click="ruleDetails.show('trigger')">
+        <li ng-class="{ 'active': ruleDetails.showTrigger }" ng-click="ruleDetails.show('trigger')">
           <svg class="List__icon List__icon_before-text">
             <use xlink:href="./assets/svg/ui/ui.symbol.svg#ios-bolt"></use>
           </svg>
           Trigger
         </li>
-        <li ng-class="{ 'active': ruleDetails.showConditions, 'disabled': ruleDetails.states.length === 0 }" ng-click="ruleDetails.show('conditions')">
+        <li ng-class="{ 'active': ruleDetails.showConditions }" ng-click="ruleDetails.show('conditions')">
           <svg class="List__icon List__icon_before-text">
             <use xlink:href="./assets/svg/ui/ui.symbol.svg#ios-loop-strong"></use>
           </svg>
@@ -72,7 +71,7 @@
         <span ng-if="ruleActionParam.eventParamName !== undefined">Value of {{ ruleActionParam.name }} = Value of {{ ruleActionParam.eventParamName }} ({{ ruleActionParam.eventType.name }})</span>
       </div>
     </div>
-    <button type="button" ng-click="ruleDetails.executeActions()">Turn on</button>
+    <button type="button" ng-if="action.ruleActionParams.length > 0" ng-click="ruleDetails.executeActions()">Turn on</button>
   </div>
 
   <div class="RuleDetails__content" ng-show="ruleDetails.showExitActions">
@@ -90,7 +89,7 @@
         </div>
       </div>
     </div>
-    <button type="button" ng-click="ruleDetails.executeExitActions()">Turn off</button>
+    <button type="button" ng-if="ruleDetails.exitActions.length > 0" ng-click="ruleDetails.executeExitActions()">Turn off</button>
   </div>
 
   <div class="RuleDetails__content" ng-show="ruleDetails.showTrigger">
