--- a/src/app/containers/thing-details/device-class-templates/device-class-hue-light.html
+++ b/src/app/containers/thing-details/device-class-templates/device-class-hue-light.html
@@ -54,57 +54,11 @@
   <p ng-if="thingDetails.enhancedParam.length === 0">This thing doesn't have any settings to show you.</p>
   <div class="Param__item" ng-switch="enhancedParam.paramType.inputType" ng-repeat="enhancedParam in thingDetails.enhancedParams track by $index">
     <div class="Param__value" ng-switch-when="InputTypePassword">
-      <input class="input_type_readonly" ng-model="enhancedParam.param.value" type="password" disabled />
+      <input class="input--type--readonly" ng-model="enhancedParam.param.value" type="password" disabled />
     </div>
     <div class="Param__value" ng-switch-default>{{ enhancedParam.param.value }}</div>
     <div class="Param__name">{{ enhancedParam.param.name }}</div>
   </div>
+
+  <button type="button" ng-click="thingDetails.remove()">Remove {{ thingDetails.name }}</button>
 </div>
-
-
-
-<!-- <guh-tabset disabled="!device.statesObject.reachable.value"> -->
-  <!-- Actions -->
-  <!-- <guh-tab heading="Control">
-    <p ng-if="device.actions.length === 0">This device doesn't have any controls.</p> -->
-
-    <!-- ON/OFF -->
-    <!-- <guh-action device-id="{{ device.id }}" action-type-id="{{ device.actionsObject.setPower.actionType.id }}"></guh-action> -->
-
-    <!-- Brightness -->
-    <!-- <guh-action device-id="{{ device.id }}" action-type-id="{{ device.actionsObject.setBrightness.actionType.id }}"></guh-action> -->
-
-    <!-- Color temperature -->
-    <!-- <guh-action device-id="{{ device.id }}" action-type-id="{{ device.actionsObject.setColorTemperature.actionType.id }}"></guh-action> -->
-
-    <!-- Color -->
-    <!-- <guh-action device-id="{{ device.id }}" action-type-id="{{ device.actionsObject.setColor.actionType.id }}"></guh-action> -->
-
-    <!-- Set effect -->
-    <!-- <guh-button-group device-id="{{ device.id }}" action="device.actionsObject.setEffect" buttons="[ 'none', 'color loop' ]"></guh-button-group> -->
-
-    <!-- Flash -->
-    <!-- <guh-button-group device-id="{{ device.id }}" action="device.actionsObject.flash" buttons="[ 'flash once', 'flash 30 seconds' ]"></guh-button-group>
-  </guh-tab> -->
-
-  <!-- States -->
-  <!-- <guh-tab heading="State">
-    <p ng-if="device.states.length === 0">This device doesn't have a state to show you.</p>
-    <div ng-switch="state.stateType.unit" ng-repeat="state in device.states track by $index" class="state">
-      <p class="name">{{ state.stateType.name }}</p>
-      <p class="value" ng-switch-when="UnitUnixTime">{{ state.value * 1000 | date: 'dd.MM.yyyy' }}, {{ state.value * 1000 | date: 'HH:mm' }}</p>
-      <p class="value" ng-switch-default>{{ state.value }} {{ state.stateType.unit | unit }}</p>
-    </div>
-  </guh-tab> -->
-
-  <!-- Settings -->
-  <!-- <guh-tab heading="Settings">
-    <p ng-if="device.params.length === 0">This device doesn't have any settings to show you.</p>
-    <div ng-repeat="param in device.params track by $index" class="param">
-      <p class="name">{{ param.name }}</p>
-      <p class="value">{{ param.value }}</p>
-    </div>
-  </guh-tab>
-</guh-tabset>
-
-<p ng-show="!device.statesObject.reachable.value">The connection to the hue light or hue bridge was lost. Please check if the light is connected to the bridge with the following IP address: {{ device.paramsObject.hostAddress.value }}. Please also check if the hue bridge is connected to your local network.</p> -->
