--- a/src/app/containers/thing-details/thing-details.html
+++ b/src/app/containers/thing-details/thing-details.html
@@ -21,23 +21,23 @@
 -->
 
 
-<guh-action-bar back-button="true" on-back="thingDetails.back()"></guh-action-bar>
+<!-- <guh-action-bar back-button="true" on-back="thingDetails.back()"></guh-action-bar> -->
 
 <div class="ThingDetails__wrapper">
   <div class="ThingDetails__sidebar">
     <div class="ThingDetails__sidebar-wrapper">
       <div class="ThingDetails__icon-wrapper">
         <svg class="ThingDetails__icon">
-          <use xlink:href="" ng-attr-xlink:href="{{ thingDetails.deviceClass.deviceIcon ? './assets/svg/device-class/device-class.symbol.svg#' + thingDetails.deviceClass.deviceIcon : './assets/svg/device-class/device-class.symbol.svg#DeviceIconDevice' }}"></use>
+          <use ng-attr-xlink:href="{{ thingDetails.deviceClass.deviceIcon ? './assets/svg/device-class/device-class.symbol.svg#' + thingDetails.deviceClass.deviceIcon : './assets/svg/device-class/device-class.symbol.svg#DeviceIconDevice' }}" xlink:href=""></use>
         </svg>
       </div>
       <div class="ThingDetails__name">{{ thingDetails.name }}</div>
       <div class="ThingDetails__description">{{ thingDetails.getDescription('&nbsp;&middot;&nbsp;') }}</div>
 
       <ul class="ThingDetails__sidebar-navigation">
-        <li ng-class="{ 'active': thingDetails.showActions, 'disabled': thingDetails.actions.length === 0 }" ng-click="thingDetails.show('actions')">Actions</li>
-        <li ng-class="{ 'active': thingDetails.showStates, 'disabled': thingDetails.states.length === 0 }" ng-click="thingDetails.show('states')">States</li>
-        <li ng-class="{ 'active': thingDetails.showSettings, 'disabled': thingDetails.params.length === 0 }" ng-click="thingDetails.show('settings')">Settings</li>
+        <li ng-class="{ 'active': thingDetails.showActions }" ng-click="thingDetails.show('actions')">Actions</li>
+        <li ng-class="{ 'active': thingDetails.showStates }" ng-click="thingDetails.show('states')">States</li>
+        <li ng-class="{ 'active': thingDetails.showSettings }" ng-click="thingDetails.show('settings')">Settings</li>
       </ul>
     </div>
   </div>
