--- a/src/app/shared/ui/form/form.scss
+++ b/src/app/shared/ui/form/form.scss
@@ -106,6 +106,12 @@ input[type="text"] {
   border-radius: 0;
 }
 
+input[type="password"].input--type--readonly {
+  border: 0;
+  color: $grey;
+  margin: 0;
+}
+
 textarea {
   @include rem(height, 6);
 }
