--- a/src/app/components/moods/detail/moods-detail.html
+++ b/src/app/components/moods/detail/moods-detail.html
@@ -40,7 +40,7 @@
         <p class="name">{{ action.device.name ? action.device.name : action.device.deviceClass.name }}</p>
       </div>
     </div>
-    <button type="button" ng-click="mood.executeActions()">Turn on</button>
+    <button type="button"  ng-if="mood.actions.length > 0" ng-click="mood.executeActions()">Turn on</button>
   </guh-tab>
 
   <!-- ExitActions -->
@@ -61,7 +61,7 @@
         <p class="name">{{ exitAction.device.name ? exitAction.device.name : exitAction.device.deviceClass.name }}</p>
       </div>
     </div>
-    <button type="button" ng-click="mood.executeExitActions()">Turn off</button>
+    <button type="button" ng-if="mood.exitActions.length > 0" ng-click="mood.executeExitActions()">Turn off</button>
   </guh-tab>
 
   <!-- Events -->
