--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -57,6 +57,7 @@
 
 @import "../assets/scss/base/reset";
 @import "../assets/scss/base/base";
+@import "../assets/scss/base/header";
 @import "../assets/scss/base/content";
 
 
