--- a/src/app/components/ui/button/button.html
+++ b/src/app/components/ui/button/button.html
@@ -23,7 +23,7 @@
 
 <button class="Button" type="button" ng-disabled="button.disabled" ng-click="button.press()">
   <span class="text text_center text_uppercase">{{ button.label }}</span>
-  <guh-icon url="./assets/svg/ui/ui.symbol.svg#refresh" ng-show="button.async && button.async.pending"></guh-icon>
-  <guh-icon url="./assets/svg/ui/ui.symbol.svg#checkmark" ng-show="button.async && button.async.success"></guh-icon>
-  <guh-icon url="./assets/svg/ui/ui.symbol.svg#close" ng-show="button.async && button.async.failure"></guh-icon>
+  <guh-icon url="./assets/svg/ui/ui.symbol.svg#load-b" ng-class="{ 'pending': button.asyncStatus.pending }" ng-show="button.asyncStatus && button.asyncStatus.pending"></guh-icon>
+  <guh-icon url="./assets/svg/ui/ui.symbol.svg#checkmark" ng-show="button.asyncStatus && button.asyncStatus.success"></guh-icon>
+  <guh-icon url="./assets/svg/ui/ui.symbol.svg#close" ng-show="button.asyncStatus && button.asyncStatus.failure"></guh-icon>
 </button>
