--- a/src/app/components/ui/button/button.scss
+++ b/src/app/components/ui/button/button.scss
@@ -23,11 +23,19 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
+@include keyframes(rotate) {
+  from {
+    @include transform(rotate(0deg));
+  }
+  to {
+    @include transform(rotate(360deg));
+  }
+}
+
+
 .Button,
 button.Button {
-  // background-color: $white;
   background-color: rgba($grey, 0.1);
-  // border: 1px solid lighten($grey, 40%);
   color: $grey;
   cursor: pointer;
   font-weight: 400;
@@ -40,15 +48,20 @@ button.Button {
 
   .Icon {
     position: absolute;
-    @include rem(right, 0.5);
-    @include rem(top, 0.75);
+    @include rem(height, 1);
+    @include rem(width, 1);
+    @include rem(right, 0.75);
+    @include rem(top, 1);
+  }
+
+  .pending .Icon {
+    @include animation(rotate 1.5s linear infinite);
   }
 }
 
 .js-no-touch {
   .Button:hover,
   button.Button:hover {
-    // background-color: lighten($grey, 50%);
     background-color: rgba($grey, 0.2);
   }
 
