Add new state-descriptor component.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -90,6 +90,7 @@
 @import "components/navigation-bar/navigation-bar";
 @import "components/param-type/param-type";
 @import "components/param-type-list/param-type-list";
+@import "components/state-descriptor/state-descriptor";
 @import "components/state-type/state-type";
 @import "components/tile-list/tile-list";
 @import "components/tile-item/tile-item";
